--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/node": "^18.7.14",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "autoprefixer": "^10.4.14",
     "clean-css": "^5.1.2",
     "cross-env": "^7.0.3",
     "electron": "^20.1.1",
@@ -86,6 +87,7 @@
     "jest": "^29.0.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
     "prettier": "^2.3.1",
     "prettier-plugin-svelte": "^2.3.1",
     "rollup": "^2.52.2",
@@ -97,6 +99,7 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.2.0",
     "svelte-preprocess": "^4.7.3",
+    "tailwindcss": "^3.3.2",
     "terser": "^5.14.2",
     "ts-jest": "^29.0.0-next.1",
     "tslib": "^2.3.0",
