--- a/package.json
+++ b/package.json
@@ -60,50 +60,50 @@
     "preversion": "npm-run-all -s lint format"
   },
   "dependencies": {
-    "electron-log": "^4.3.5",
-    "electron-store": "^8.0.0",
-    "electron-updater": "^5.2.1"
+    "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@tsconfig/svelte": "^3.0.0",
-    "@types/clean-css": "^4.2.4",
-    "@types/html-minifier": "^4.0.0",
-    "@types/node": "^18.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@tsconfig/svelte": "^4.0.1",
+    "@types/clean-css": "^4.2.6",
+    "@types/html-minifier": "^4.0.2",
+    "@types/node": "^18.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
-    "clean-css": "^5.1.2",
+    "clean-css": "^5.3.2",
     "cross-env": "^7.0.3",
     "electron": "^24.1.3",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsdoc": "^43.1.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "html-minifier": "^4.0.0",
-    "jest": "^29.0.1",
-    "nodemon": "^2.0.7",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
-    "prettier": "^2.3.1",
-    "prettier-plugin-svelte": "^2.3.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
     "rollup": "^2.52.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.2.0",
-    "svelte-preprocess": "^4.7.3",
+    "svelte": "^3.58.0",
+    "svelte-check": "^3.2.0",
+    "svelte-preprocess": "^5.0.3",
     "tailwindcss": "^3.3.2",
-    "terser": "^5.14.2",
-    "ts-jest": "^29.0.0-next.1",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.4"
+    "terser": "^5.17.1",
+    "ts-jest": "^29.1.0",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   },
   "build": {
     "productName": "Electron Svelte Typescript",
