--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "svelte": "^3.58.0",
     "svelte-check": "^3.2.0",
     "svelte-preprocess": "^5.0.3",
+    "svelte-splitpanes": "^0.7.13",
     "tailwindcss": "^3.3.2",
     "terser": "^5.17.1",
     "ts-jest": "^29.1.0",
