--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   "dependencies": {
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "svelvet": "^7.0.40"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.1.0",
