Rewrite home layout to make it simple and responsive

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "url": "https://github.com/COS301-SE-2023/AI-Photo-Editor"
   },
   "author": {
-    "name": "",
-    "email": "",
-    "url": ""
+    "name": "TopG",
+    "email": "cos301.spanish.inquisition@gmail.com",
+    "url": "https://github.com/COS301-SE-2023/AI-Photo-Editor"
   },
   "license": "MIT",
   "bugs": {
