--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "prebuild": "cross-env NODE_ENV=production node scripts/preBuild.js",
     "build": "cross-env NODE_ENV=production npm-run-all -s build:frontend:prod build:electron:prod",
     "postbuild": "cross-env NODE_ENV=production node scripts/postBuild.js",
-    "build:frontend:dev": "cross-env NODE_ENV=development rollup -c -w",
-    "build:frontend:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:frontend:dev": "cross-env NODE_ENV=development rollup -c -w --bundleConfigAsCjs",
+    "build:frontend:prod": "cross-env NODE_ENV=production rollup -c --bundleConfigAsCjs",
     "build:electron:dev": "tsc --p ./tsconfig.electron.json",
     "build:electron:dev:watch": "tsc -w --p ./tsconfig.electron.json",
     "build:electron:prod": "cross-env NODE_ENV=production tsc --p ./tsconfig.electron.prod.json",
@@ -67,6 +67,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
     "@tsconfig/svelte": "^4.0.1",
     "@types/clean-css": "^4.2.6",
@@ -78,10 +79,10 @@
     "clean-css": "^5.3.2",
     "cross-env": "^7.0.3",
     "electron": "^24.2.0",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.3.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jsdoc": "^43.1.1",
+    "eslint-plugin-jsdoc": "^43.2.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "html-minifier": "^4.0.0",
     "jest": "^29.5.0",
@@ -90,12 +91,11 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.21.5",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^2.0.2",
     "rollup-plugin-svelte": "^7.1.4",
-    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.59.0",
     "svelte-check": "^3.3.1",
     "svelte-preprocess": "^5.0.3",
