--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,13 @@
 {
-  "printWidth": 120,
-  "singleQuote": false,
-  "trailingComma": "es5",
-  "jsxSingleQuote": false,
-  "svelteSortOrder": "styles-scripts-markup",
-  "svelteStrictMode": true,
-  "svelteAllowShorthand": false
+	"printWidth": 100,
+	"singleQuote": false,
+	"trailingComma": "es5",
+	"plugins": [
+		"prettier-plugin-svelte",
+		"prettier-plugin-tailwindcss"
+	],
+	"pluginSearchDirs": false,
+	"svelteSortOrder": "scripts-markup-styles",
+	"svelteStrictMode": true,
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
