--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@tsconfig/svelte": "^4.0.1",
     "@types/clean-css": "^4.2.6",
     "@types/html-minifier": "^4.0.2",
+    "@types/jest": "^29.5.1",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
