--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "svelvet": "^7.0.42"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.1",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
