--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
-    "svelvet": "^7.0.42"
+    "svelvet": "^7.0.42",
+    "tinykeys": "^1.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.1.0",
