--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
+    "sharp": "^0.32.1",
     "svelvet": "^7.0.42"
   },
   "devDependencies": {
