Add backend unit tests

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "types": ["node", "svelte"],
+    "types": ["node", "svelte", "jest"],
     "sourceMap": true,
     "target": "ESNext",
     "stripInternal": true,
