--- a/jest.config.json
+++ b/jest.config.json
@@ -5,5 +5,6 @@
   },
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-  "coverageDirectory": "coverage"
+  "coverageDirectory": "coverage",
+  "testPathIgnorePatterns": ["build"]
 }
