--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "(src|scripts)/**": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "electron-ipc-mock": "^0.0.3",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
