--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "autoprefixer": "^10.4.14",
     "clean-css": "^5.3.2",
     "cross-env": "^7.0.3",
+    "dmg-license": "^1.0.11",
     "electron": "^24.2.0",
     "electron-builder": "^24.3.0",
     "eslint": "^8.39.0",
