Add rudimentary plugin management + loading

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photo-editor",
+  "name": "blix",
   "description": "COS 301 Capstone Project - AI Photo Editor",
   "version": "0.0.0",
   "repository": {
