--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -25,6 +25,6 @@
     "esModuleInterop": true,
     "isolatedModules": true
   },
-  "include": ["."],
+  "include": [".", "../global.d.ts"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
