--- a/package.json
+++ b/package.json
@@ -75,19 +75,23 @@
     "tinykeys": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.5",
     "@catppuccin/tailwindcss": "^0.1.1",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
     "@types/clean-css": "^4.2.6",
     "@types/html-minifier": "^4.0.2",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.5.0",
     "clean-css": "^5.3.2",
     "cross-env": "^7.0.3",
     "electron": "^24.2.0",
@@ -99,6 +103,7 @@
     "html-minifier": "^4.0.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
@@ -113,6 +118,7 @@
     "rollup-plugin-svelte": "^7.1.4",
     "svelte": "^3.59.0",
     "svelte-check": "^3.3.1",
+    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.3",
     "svelte-splitpanes": "^0.7.13",
     "tailwindcss": "^3.3.2",
