Configure playwrite for integration testing

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "start:electron:dev": "npm-run-all -s build:electron:dev start:electron:nodemon",
     "start:electron": "npm-run-all -p build:electron:dev:watch start:electron:dev",
     "test": "jest --config jest.config.json",
+    "playwrite": "playwright test",
     "postinstall": "electron-builder install-app-deps",
     "prepack": "npm run build",
     "pack": "electron-builder --dir",
@@ -80,6 +81,7 @@
     "@catppuccin/tailwindcss": "^0.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@playwright/test": "^1.35.1",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
