Refactored unit tests and config

--- a/jest.config.json
+++ b/jest.config.json
@@ -13,5 +13,5 @@
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node", "svelte"],
   "coverageDirectory": "coverage",
-  "testPathIgnorePatterns": ["\bbuild\b"]
+  "testPathIgnorePatterns": ["\bbuild\b","integration"]
 }
