--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "svelte": "^3.59.0",
     "svelte-check": "^3.3.1",
     "svelte-fa": "^3.0.4",
+    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.3",
     "svelte-splitpanes": "^0.7.13",
     "tailwindcss": "^3.3.2",
