--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "start:electron:dev": "npm-run-all -s build:electron:dev start:electron:nodemon",
     "start:electron": "npm-run-all -p build:electron:dev:watch start:electron:dev",
     "test": "jest --config jest.config.json",
+    "preplaywrite": "npm run build",
     "playwrite": "playwright test",
     "postinstall": "electron-builder install-app-deps",
     "prepack": "npm run build",
