--- a/jest.config.json
+++ b/jest.config.json
@@ -13,5 +13,10 @@
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node", "svelte"],
   "coverageDirectory": "coverage",
-  "testPathIgnorePatterns": ["\bbuild\b","integration"]
+  "testPathIgnorePatterns": ["\bbuild\b"],
+  "moduleNameMapper": {
+    "^@electron/(.*)$": "<rootDir>/src/electron/$1",
+    "^@frontend/(.*)$": "<rootDir>/src/frontend/$1",
+   "^@shared/(.*)$": "<rootDir>/src/shared/$1"
+}
 }
