--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "electron-updater": "^5.3.0",
     "sharp": "^0.32.1",
     "svelvet": "^8.0.4",
-    "tinykeys": "^1.4.0"
+    "tinykeys": "^1.4.0",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
@@ -132,7 +133,7 @@
     "terser": "^5.17.1",
     "ts-jest": "^29.1.0",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "optionalDependencies": {
     "dmg-license": "^1.0.11"
