--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "electron-updater": "^5.3.0",
     "sharp": "^0.32.1",
     "svelvet": "^8.0.4",
-    "tinykeys": "^1.4.0",
-    "tsc": "^2.0.4"
+    "tinykeys": "^1.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
