--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -27,6 +27,6 @@
     "esModuleInterop": true,
     "isolatedModules": true
   },
-  "include": [".", "../global.d.ts", "../shared/**/*.ts"],
+  "include": [".", "../global.d.ts"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
