--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blix",
-  "description": "COS 301 Capstone Project - AI Photo Editor",
-  "version": "0.0.0",
+  "description": "Blix - A cross-platform AI-assisted graph photo editor",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/COS301-SE-2023/AI-Photo-Editor"
@@ -138,9 +138,9 @@
     "dmg-license": "^1.0.11"
   },
   "build": {
-    "productName": "AI Photo Editor",
-    "appId": "ai.photo.editor",
-    "copyright": "Copyright © 2021 ${author}",
+    "productName": "Blix",
+    "appId": "com.the-spanish-inquisition.blix",
+    "copyright": "Copyright © 2023 The Spanish Inquisition",
     "win": {
       "target": [
         "nsis"
