--- a/jest.config.json
+++ b/jest.config.json
@@ -13,10 +13,5 @@
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node", "svelte"],
   "coverageDirectory": "coverage",
-  "testPathIgnorePatterns": ["\bbuild\b"],
-  "moduleNameMapper": {
-    "^@electron/(.*)$": "./src/electron/$1",
-    "^@frontend/(.*)$": "./src/frontend/$1",
-    "^@shared/(.*)$": "./src/shared/$1"
-}
+  "testPathIgnorePatterns": ["\bbuild\b"]
 }
