--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "(src|scripts)/**": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@electron/remote": "^2.0.10",
     "chokidar": "^3.5.3",
     "electron-affinity": "^1.2.4",
     "electron-ipc-mock": "^0.0.3",
     "electron-log": "^4.4.8",
+    "electron-prompt": "^1.7.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "sharp": "^0.32.1",
@@ -91,6 +93,7 @@
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
     "@types/clean-css": "^4.2.6",
+    "@types/electron-prompt": "^1.6.1",
     "@types/html-minifier": "^4.0.2",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.0.0",
