Add playwright config

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start:electron": "npm-run-all -p build:electron:dev:watch start:electron:dev",
     "test": "jest --config jest.config.json",
     "preplaywrite": "npm run build",
-    "playwrite": "playwright test",
+    "playwright": "playwright test",
     "postinstall": "electron-builder install-app-deps",
     "prepack": "npm run build",
     "pack": "electron-builder --dir",
@@ -113,6 +113,7 @@
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
+    "playwright": "^1.35.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
