--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "electron-updater": "^5.3.0",
     "sharp": "^0.32.1",
     "svelvet": "^8.0.4",
-    "tinykeys": "^1.4.0"
+    "tinykeys": "^1.4.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
