--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "(src|scripts)/**": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "@electron/remote": "^2.0.10",
-    "blix_svelvet": "^1.0.0",
+    "@popperjs/core": "^2.11.8",
+    "blix_svelvet": "^1.0.7",
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
     "cohere-ai": "^5.1.0",
@@ -81,11 +81,11 @@
     "electron-updater": "^5.3.0",
     "flowbite": "^1.7.0",
     "flowbite-svelte": "^0.39.2",
+    "langchain": "^0.0.104",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
     "tinykeys": "^1.4.0",
-    "zod": "^3.21.4",
-    "langchain": "^0.0.104"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
