--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "@electron/remote": "^2.0.10",
     "@popperjs/core": "^2.11.8",
+    "@types/chokidar": "^2.1.3",
     "blix_svelvet": "^1.0.13",
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
