Add missing resources path for build prod

--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     ],
     "extraResources": [
       "assets/**",
+      "blix-plugins",
       {
         "from": "src/electron/lib/ai/python",
         "to": "python",
