Remove blix-plugins from testing

--- a/jest.config.json
+++ b/jest.config.json
@@ -10,6 +10,7 @@
     "^.+\\.ts$": "ts-jest",
     "^.+\\.js$": "babel-jest"
   },
+  "coveragePathIgnorePatterns" : [ "blix-plugins" ],
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node", "svelte"],
   "coverageDirectory": "coverage",
