--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches: [ master, dev ]
     types: [opened, synchronize, reopened, ready_for_review]
+  push:
+    branches: [ feature/tests ]
 permissions:
   contents: read
 
@@ -12,7 +14,7 @@ jobs:
     name: Start State 🚀🚀🚀
     runs-on: ubuntu-latest
     steps:
-    - name: Starting 
+    - name: Starting
       id: init
       run: |
         echo "Starting linting of ${{ github.repository }}"
@@ -55,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: run_all_tests
     steps:
-    - name: Ending 
+    - name: Ending
       id: init
       run: |
         echo "Ending linting of ${{ github.repository }}"
