Add building to testing workflow for e2e testing

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      - name: Run tests and collect coverage
+      - name: Run unit/integration tests and collect coverage
         run: npm run test
       - name: Upload coverage to Codecov
         if: ${{ runner.os == 'macOS' }}
@@ -51,6 +51,10 @@ jobs:
         with:
           files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Build app
+        run: npm run build
+      - name: Run e2e tests
+        run: npm run playwright
 
   end:
     name: End State ✅✅✅
