--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "start:electron:nodemon": "nodemon --verbose",
     "start:electron:dev": "npm-run-all -s build:electron:dev start:electron:nodemon",
     "start:electron": "sleep 2 && npm-run-all -p build:electron:dev:watch start:electron:dev",
-    "test": "jest --config jest.config.json && npm run playwright",
+    "test": "jest --config jest.config.json",
     "preplaywrite": "npm run build",
     "playwright": "playwright test",
     "postinstall": "electron-builder install-app-deps",
