--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,6 +51,8 @@ jobs:
         with:
           files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
       - name: Build app
         run: npm run build
       - name: Run e2e tests
