--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,12 +51,8 @@ jobs:
         with:
           files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
-      - name: Install playwright browsers
-        run: npx playwright install --with-deps
-      - name: Build app
-        run: npm run build
-      - name: Run e2e tests
-        run: npm run playwright
+      - name: Build app and run e2e tests
+        run: npm run build && npm run playwright
 
   end:
     name: End State ✅✅✅
