Add basic GLFX image editing plugin

--- a/blix-plugins/glfx-plugin/package.json
+++ b/blix-plugins/glfx-plugin/package.json
@@ -14,7 +14,7 @@
         "commands": [],
         "nodes": []
     },
-    "main": "src/main.js",
+    "main": "src/main.cjs",
     "renderer": "src/renderer.js",
     "devDependencies": {
         "@rollup/plugin-commonjs": "^24.0.0",
