--- a/blix-plugins/threlte-plugin/package.json
+++ b/blix-plugins/threlte-plugin/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "glfx-plugin",
-    "displayName": "GLFX Plugin",
-    "description": "Performs basic image operations using glfx.js",
+    "name": "thelte-plugin",
+    "displayName": "Threlte Plugin",
+    "description": "",
     "version": "0.0.1",
     "author": "Rec1dite",
     "repository": "",
