--- a/package.json
+++ b/package.json
@@ -70,25 +70,35 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.10",
+    "@pinecone-database/pinecone": "^0.1.6",
     "@popperjs/core": "^2.11.8",
     "@types/chokidar": "^2.1.3",
+    "@xenova/transformers": "^2.5.2",
     "blix_svelvet": "^1.0.13",
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
+    "cli-progress": "^3.12.0",
     "cohere-ai": "^5.1.0",
+    "dotenv": "^16.0.3",
     "electron-affinity": "^1.2.4",
     "electron-ipc-mock": "^0.0.3",
     "electron-log": "^4.4.8",
     "electron-prompt": "^1.7.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
+    "find-up": "^6.3.0",
     "flowbite": "^1.7.0",
     "flowbite-svelte": "^0.39.2",
     "langchain": "^0.0.104",
+    "onnxruntime-node": "^1.14.0",
+    "papaparse": "^5.4.1",
+    "pinecone-client": "^1.1.0",
     "sharp": "^0.32.1",
     "svelte": "^3.59.0",
     "tailwind-merge": "^1.13.2",
     "tinykeys": "^1.4.0",
+    "uuid": "^9.0.0",
+    "yargs": "^17.7.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -105,12 +115,17 @@
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
     "@types/clean-css": "^4.2.6",
+    "@types/cli-progress": "^3.11.0",
     "@types/electron-prompt": "^1.6.1",
     "@types/html-minifier": "^4.0.2",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.0.0",
+    "@types/papaparse": "^5.3.7",
+    "@types/uuid": "^9.0.1",
+    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-v8": "^0.34.1",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.5.0",
     "clean-css": "^5.3.2",
@@ -121,6 +136,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsdoc": "^43.2.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "esm": "^3.2.25",
     "html-minifier": "^4.0.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -133,6 +149,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
     "prettier-plugin-tailwindcss": "^0.2.8",
+    "rimraf": "^4.1.2",
     "rollup": "^3.21.5",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.5",
@@ -146,8 +163,10 @@
     "tailwindcss": "^3.3.2",
     "terser": "^5.17.1",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.0.4",
+    "vitest": "^0.34.1"
   },
   "optionalDependencies": {
     "dmg-license": "^1.0.11"
