--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prepublishOnly": "npm-run-all -s test lint",
     "preversion": "npm-run-all -s lint format",
     "prepare": "husky install",
-    "profile:llm": "npm run build:electron:dev && node build/electron/lib/ai/ai.profiler.js"
+    "profile:llm": "npm run build:electron:dev && node build/electron/lib/ai/ai-profiler-v2.js"
   },
   "lint-staged": {
     "src/electron/**/*.{js,ts}": "eslint -c eslint.electron.json",
@@ -75,6 +75,7 @@
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
     "cohere-ai": "^5.1.0",
+    "dotenv": "^16.3.1",
     "electron-affinity": "^1.2.4",
     "electron-ipc-mock": "^0.0.3",
     "electron-log": "^4.4.8",
@@ -84,6 +85,7 @@
     "flowbite": "^1.7.0",
     "flowbite-svelte": "^0.39.2",
     "langchain": "^0.0.104",
+    "openai": "^3.3.0",
     "sharp": "^0.32.1",
     "svelte": "^3.59.0",
     "tailwind-merge": "^1.13.2",
