--- a/package.json
+++ b/package.json
@@ -157,18 +157,17 @@
     "appId": "com.the-spanish-inquisition.blix",
     "copyright": "Copyright© 2023 Blix",
     "win": {
-      "target": [
-        "nsis"
-      ]
+      "target": "nsis"
+      
     },
     "mac": {
-      "target": ["dmg"],
+      "target": "dmg",
       "category": "productivity",
       "type": "distribution",
       "hardenedRuntime": "true"
     },
     "linux": {
-      "target": ["AppImage"],
+      "target": "AppImage",
       "category": "productivity"
     },
     "files": [
@@ -187,12 +186,10 @@
         ]
       }
     ],
-    "publish": [
-      {
+    "publish": {
         "provider": "github",
         "owner": "ArmandKrynauw",
         "repo": "Blix"
       }
-    ]
   }
 }
