--- a/blix-plugins/pixi-plugin/package.json
+++ b/blix-plugins/pixi-plugin/package.json
@@ -17,7 +17,7 @@
     },
     "main": "src/main.cjs",
     "renderers": {
-        "main": "src/index.html"
+        "pixiRenderer": "src/index.html"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^24.0.0",
@@ -26,6 +26,7 @@
         "@rollup/plugin-typescript": "^11.1.2",
         "@tsconfig/svelte": "^5.0.0",
         "@types/node": "^12.0.0",
+        "pixi-viewport": "^5.0.2",
         "pixi.js": "^7.2.4",
         "rollup": "^3.15.0",
         "rollup-plugin-css-only": "^4.3.0",
