--- a/blix-plugins/blink/package.json
+++ b/blix-plugins/blink/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "pixi-plugin",
-    "displayName": "Pixi Plugin",
-    "description": "",
+    "name": "blink",
+    "displayName": "Blink",
+    "description": "Dynamic image editing for Blix",
     "version": "0.0.1",
     "author": "Rec1dite",
     "repository": "",
@@ -17,7 +17,7 @@
     },
     "main": "src/main.cjs",
     "renderers": {
-        "pixiRenderer": "src/index.html"
+        "blinkRenderer": "src/index.html"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^24.0.0",
