--- a/blix-plugins/blink/package.json
+++ b/blix-plugins/blink/package.json
@@ -8,7 +8,9 @@
     "type": "module",
     "scripts": {
         "build": "rollup -c",
-        "dev": "rollup -c -w",
+        "webview": "rollup -cw",
+        "main": "tsc-watch src/main.cts --outDir dist",
+        "dev": "concurrently \"npm run webview\" \"npm run main\"",
         "check": "svelte-check"
     },
     "contributes": {
@@ -26,16 +28,18 @@
         "@rollup/plugin-typescript": "^11.1.2",
         "@tsconfig/svelte": "^5.0.0",
         "@types/node": "^12.0.0",
+        "concurrently": "^8.2.1",
         "pixi-viewport": "^5.0.2",
         "pixi.js": "^7.2.4",
         "rollup": "^3.15.0",
         "rollup-plugin-css-only": "^4.3.0",
-        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-livereload": "^2.0.5",
         "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-svelte": "^7.1.2",
         "svelte": "^3.55.0",
         "svelte-check": "^3.5.0",
         "svelte-preprocess": "^5.0.4",
+        "tsc-watch": "^6.0.4",
         "tslib": "^2.6.1",
         "typescript": "^4.9.0"
     },
