--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master, dev ]
     types: [opened, synchronize, reopened, ready_for_review]
   push:
-    branches: [ feature/tests ]
+    branches: [ feature/projects ]
 permissions:
   contents: read
 
