Initial cov attempt

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,7 +51,21 @@ jobs:
         with:
           files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
-
+coverage:
+  status:
+    project:
+      default:
+        # basic
+        target: 0%
+        threshold: 10%
+       # advanced settings
+        branches: 
+          - master
+          - dev
+        if_ci_failed: error #success, failure, error, ignore
+        informational: false
+        only_pulls: false
+        
   end:
     name: End State ✅✅✅
     runs-on: ubuntu-latest
