--- a/blix-plugins/hello-plugin/package.json
+++ b/blix-plugins/hello-plugin/package.json
@@ -18,7 +18,7 @@
     },
 
     "main": "dist/main.js",
-    "renderer": "src/renderer.js",
+    "renderers": {},
 
     "devDependencies": {
         "@types/node": "^12.0.0",
