--- a/blix-plugins/input-plugin/package.json
+++ b/blix-plugins/input-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Input-plugin",
+    "name": "input-plugin",
     "displayName": "Input Plugin",
     "description": "Provides basic nodes for providing input to a graph.",
     "version": "0.0.1",
@@ -9,24 +9,11 @@
 
     "contributes": {
         "commands": [],
-        "nodes": [
-            {
-                "id": "input",
-                "name": "Input",
-                "interface" : {
-                    "inputs": {
-                    "numA": "int"
-                    },
-                    "outputs": {
-                        "numOut": "int"
-                    }
-                }
-            }
-        ]
+        "nodes": []
     },
 
     "main": "src/main.js",
-    "renderer": "src/renderer.js",
+    "renderers": {},
 
     "devDependencies": {
         "@types/node": "^12.0.0",
