--- a/blix-plugins/logic-plugin/package.json
+++ b/blix-plugins/logic-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Logic-plugin",
+    "name": "logic-plugin",
     "displayName": "Logic Plugin",
     "description": "Performs basic logical operations through n-ary nodes.",
     "version": "0.0.1",
@@ -13,7 +13,7 @@
     },
 
     "main": "src/main.js",
-    "renderer": "src/renderer.js",
+    "renderers": {},
 
     "devDependencies": {
         "@types/node": "^12.0.0",
