--- a/blix-plugins/blink/package.json
+++ b/blix-plugins/blink/package.json
@@ -29,6 +29,7 @@
         "@tsconfig/svelte": "^5.0.0",
         "@types/node": "^12.0.0",
         "concurrently": "^8.2.1",
+        "pixi-filters": "^5.2.1",
         "pixi-viewport": "^5.0.2",
         "pixi.js": "^7.2.4",
         "rollup": "^3.15.0",
