--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "babel-jest": "^29.5.0",
     "chalk": "^4.1.2",
     "clean-css": "^5.3.2",
+    "colord": "^2.9.3",
     "commander": "^11.0.0",
     "cross-env": "^7.0.3",
     "electron": "^24.2.0",
@@ -148,6 +149,7 @@
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^2.0.2",
     "rollup-plugin-svelte": "^7.1.4",
+    "svelte-awesome-color-picker": "^2.4.7",
     "svelte-check": "^3.3.1",
     "svelte-fa": "^3.0.4",
     "svelte-jester": "^2.3.2",
