--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build/release
 on: push
 
 jobs:
-  release:
+  Build:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -28,11 +28,11 @@ jobs:
       - name: Build/Release Blix
         run: |
           if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            npm run dist -- --linux deb
+            npm run dist -- --linux deb AppImage --x64 --arm64
           elif [ "${{ matrix.os }}" = "windows-latest" ]; then
             npm run dist -- --windows nsis
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            echo "macOS build not supported yet"
+            npm run dist -- --mac dmg --x64 --arm64
           fi
         env:
           GH_TOKEN: ${{ secrets.TEST_TOKEN }}
