--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "blix",
   "description": "Blix - An AI-assisted graph photo editor",
-  "version": "1.0.25",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArmandKrynauw/Blix.git"
+    "url": "https://github.com/COS301-SE-2023/AI-Photo-Editor.git"
   },
   "author": {
     "name": "The Spanish Inquisition",
@@ -184,6 +184,7 @@
     },
     "linux": {
       "target": [
+        "deb",
         "AppImage"
       ],
       "category": "productivity"
@@ -200,8 +201,8 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "ArmandKrynauw",
-        "repo": "Blix"
+        "owner": "COS301-SE-2023",
+        "repo": "AI-Photo-Editor"
       }
     ]
   }
