Improve robustness of Blypescript Toolbox and Plugins
- Simplify plugin names for GLFX and input
- Refacotor how output node gets added in Blix init
- Improve the LLM guide prompt
- Fix spelling issues in the Assets tile
- Add some basic checks to validate that primitive types get repaired correctly in a Blypescript program

--- a/blix-plugins/glfx-plugin/package.json
+++ b/blix-plugins/glfx-plugin/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "glfx-plugin",
+    "name": "glfx",
     "displayName": "GLFX Plugin",
     "description": "Performs basic image operations using glfx.js",
     "version": "0.0.1",
